2025/1/21 バッチ処理 サービス、リポジトリ追加

--- a/TODO
+++ b/TODO
@@ -1,4 +1,18 @@
+#バッチ処理
+
 # TODO 異常値検出処理のまとめ　流し方
 # TODO 異常値検出処理のまとめ　検出対象のピックアップ
 # TODO 異常値検出処理のまとめ　検出結果の保存方法
 # TODO 異常値検出処理のまとめ　定期的な運用改善会の内容決定
+
+#TODO MARGEのストアドを流す
+
+#TODO 古いデータの削除
+
+#SQLServer
+#TODO シノニム、シーケンスの設計検討
+
+#TODO 最終処理完了日テーブルの設計
+
+#TODO　マスタ連携ストアド　import
+#TODO　マスタ連携ストアド　export
